# cookiecutter-python

./: CLAUDE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.distribution_name}}/: .gitignore  README.md  pyproject.toml
