[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{cookiecutter.distribution_name}}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
description = "{{cookiecutter.description}}"
readme = "README.md"
license = "{{cookiecutter.license}}"
requires-python = "{{cookiecutter.python_requires}}"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "isort[colors]",
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.author_name}}/{{cookiecutter.distribution_name}}"
Repository = "https://github.com/{{cookiecutter.author_name}}/{{cookiecutter.distribution_name}}"
Issues = "https://github.com/{{cookiecutter.author_name}}/{{cookiecutter.distribution_name}}/issues"

[tool.isort]
profile = "black"